Boostflow/Boostflow-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: boostflow-deployment
  namespace: default
  labels:
    app: boostflow
spec:
  selector:
    matchLabels:
      app: boostflow
  replicas: 2
  template:
    metadata:
      labels:
        app: boostflow
    spec:
      containers:
      - name: boostflow
        image: ghcr.io/nikosd767/boostflow:latest
        livenessProbe:
          httpGet:
            path: "/"
            port: 3000
          failureThreshold: 3
          periodSeconds: 10
          initialDelaySeconds: 30
        readinessProbe:
          httpGet:
            path: "/"
            port: 3000
          failureThreshold: 3
          periodSeconds: 10
          initialDelaySeconds: 15
        resources:
          requests:
            cpu: 200m
            memory: 512Mi
          limits:
            cpu: 1000m
            memory: 1Gi
        ports:
        - containerPort: 3000
          name: boostflow
      imagePullSecrets:
      - name: registry-credentials
