Boostflow/Boostflow-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: boostflow
  name: boostflow-svc
spec:
  ports:
    - port: 3000
      protocol: TCP
      targetPort: 3000
      name: boostflow
  selector:
    app: boostflow
  type: ClusterIP
