Boostflow/Boostflow-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: boostflow-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - react.boostflow.dns-cloud.new.net
    secretName: boostflow-tls-secret
  rules:
    - host: react.boostflow.dns-cloud.new.net 
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: boostflow-svc
                port:
                  name: boostflow
